@@ -3903,3 +3903,4 @@ Changelog for GXemul:
 		Beginning to implement a "pre run check" mechanism.
 20090720	Implementing PreRunCheck for CPU components (they need to have
 		an address/data bus, either as a child or as a parent, to run).
+20090721	Implementing PreRunCheck for MainBusComponent.
